# mavis-cucumber-spike

./: .gitignore  .tool-versions  173.app-01ff983b.js  174.app-01ff983b.js  282.app-01ff983b.js  416.app-01ff983b.js  600.app-01ff983b.js  605.app-01ff983b.js  638.app-01ff983b.js  672.app-01ff983b.js  686.app-01ff983b.js  943.app-01ff983b.js  README.md  allure.mjs  allurerc.mjs  app-01ff983b.js  behave.ini  cohorts.csv  conftest.py  index.html  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: test-and-publish.yaml  test.yaml
4/: index.html
4/export/: influxDbData.txt
Desktop Firefox/3/: index.html
awesome/: 252.app-01ff983b.js  29.app-01ff983b.js  527.app-01ff983b.js  725.app-01ff983b.js  741.app-01ff983b.js  755.app-01ff983b.js  894.app-01ff983b.js  980.app-01ff983b.js  index.html  styles-01ff983b.css
awesome/widgets/: pie_chart.json
features/: authentication.feature  environment.py  fixtures.py  importing.feature  importing_class_lists.feature  importing_cohorts.feature  importing_vaccinations.feature
features/steps/: imports.py  log_in.py
files/: mavis-vaccination-records-with-whitespace.csv
iPhone 13/: index.html
iPhone 13/3/: index.html
iPhone 13/last-history/: duration-trend.json  history.json  retry-trend.json
mavis/testing/: __init__.py  fixtures.py  (+2 more)
tests/: test_authentication.py  test_importing.py  test_importing_class_lists.py  test_importing_cohorts.py  test_importing_vaccination_records.py  test_importing_vaccinations.py
widgets/: environments.json  nav.json  pie_chart.json  statistic.json  tree.json
(+59 files in other folders)
