[project]
name = "mavis-testing-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-behave>=2.14.2",
    "behave>=1.2.6",
    "playwright>=1.52.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.behave]
format = "allure_behave.formatter:AllureFormatter"
outfiles = "allure-results"
