[project]
name = "mavis-testing-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest-bdd>=2.14.2",
    "faker>=37.3.0",
    "nhs-number>=1.3.4",
    "playwright>=1.52.0",
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir"
]
bdd_features_base_dir = "features"
